--- a/src/views/farmer_dashboard.hbs
+++ b/src/views/farmer_dashboard.hbs
@@ -176,9 +176,9 @@
     {{/if}}
     <br>
     <div class="row">
-      <div class="col-lg-2"></div>
+      <div class="col-lg-4"></div>
       <div class="col">
-        <div class="card" style="opacity: 90%; height: 160px">
+        <div class="card" style="opacity: 90%; height: 130px">
           <div class="card-body">
             <h5 class="card-title">Add new crop details</h5>
             <div class="row">
@@ -190,8 +190,13 @@
           </div>
         </div>
       </div>
+      <div class="col-lg-4"></div>
+    </div>
+    <br>
+    <div class="row">
+      <div class="col-lg-4"></div>
       <div class="col">
-        <div class="card" style="opacity: 90%; height: 160px">
+        <div class="card" style="opacity: 90%; height: 170px">
           <div class="card-body">
             <h5 class="card-title">New notifications</h5>
             <p class="card-text">New deal/order confirmation request from </p>
@@ -206,7 +211,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-2"></div>
+      <div class="col-lg-4"></div>
     </div>
   </div>
   
