--- a/src/views/investor_dashboard.hbs
+++ b/src/views/investor_dashboard.hbs
@@ -47,7 +47,7 @@
               <span class="icon-menu"></span>
               <span class="icon-menu"></span>
             </button>
-            <img src="/img/logo.png" class="navbar-brand" style="width: 250px" alt=""/>
+            <img src="/img/logo.png" class="navbar-brand" style="width: 230px; height:70px" alt=""/>
           </div>
           <div class="collapse navbar-collapse" id="main-navbar" style="margin-left: 350px;">
             <ul class="navbar-nav mr-auto w-100">
@@ -66,7 +66,6 @@
             </ul>
           </div>
         </div>
-
         <ul class="mobile-menu">
           <li>
             <a class="page-scroll" href="dashboard">Dashboard</a>
