--- a/src/views/layouts/layout.hbs
+++ b/src/views/layouts/layout.hbs
@@ -34,18 +34,18 @@
   
     {{{body}}}
     
-    <script src="/static/js/jquery-min.js"></script>
-    <script src="/static/js/popper.min.js"></script>
-    <script src="/static/js/bootstrap.min.js"></script>
-    <script src="/static/js/jquery.countdown.min.js"></script>
-    <script src="/static/js/jquery.nav.js"></script>
-    <script src="/static/js/jquery.easing.min.js"></script>
-    <script src="/static/js/wow.js"></script>
-    <script src="/static/js/jquery.slicknav.js"></script>
-    <script src="/static/js/nivo-lightbox.js"></script>
-    <script src="/static/js/main.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/static/js/jquery-min.js"></script>
+    <script type="text/javascript" src="/static/js/popper.min.js"></script>
+    <script type="text/javascript" src="/static/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="/static/js/jquery.countdown.min.js"></script>
+    <script type="text/javascript" src="/static/js/jquery.nav.js"></script>
+    <script type="text/javascript" src="/static/js/jquery.easing.min.js"></script>
+    <script type="text/javascript" src="/static/js/wow.js"></script>
+    <script type="text/javascript" src="/static/js/jquery.slicknav.js"></script>
+    <script type="text/javascript" src="/static/js/nivo-lightbox.js"></script>
+    <script type="text/javascript" src="/static/js/main.js"><}/script>
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
 </body>
 </html>
