--- a/src/views/farmer_dashboard.hbs
+++ b/src/views/farmer_dashboard.hbs
@@ -47,7 +47,7 @@
               <span class="icon-menu"></span>
               <span class="icon-menu"></span>
             </button>
-            <img src="/img/logo.png" class="navbar-brand" style="width: 250px" alt=""/>
+            <img src="/img/logo.png" class="navbar-brand" style="width: 250px; height: 70px" alt=""/>
           </div>
           <div class="collapse navbar-collapse" id="main-navbar" style="margin-left: 350px;">
             <ul class="navbar-nav mr-auto w-100">
