--- a/src/views/farmer_dashboard.hbs
+++ b/src/views/farmer_dashboard.hbs
@@ -49,10 +49,13 @@
             </button>
             <img src="/img/logo.png" class="navbar-brand" style="width: 250px; height: 70px" alt=""/>
           </div>
-          <div class="collapse navbar-collapse" id="main-navbar" style="margin-left: 350px;">
+          <div class="collapse navbar-collapse" id="main-navbar" style="margin-left: 20%;">
             <ul class="navbar-nav mr-auto w-100">
               <li class="nav-item active">
                 <a class="nav-link" href="dashboard">Dashboard</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="notifications">Notifications</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="updateprofile">Update Profile</a>
@@ -70,6 +73,9 @@
         <ul class="mobile-menu">
           <li>
             <a class="page-scroll" href="dashboard">Dashboard</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="notifications">Notifications</a>
           </li>
           <li>
             <a class="page-scroll" href="updateprofile">Update Profile</a>
@@ -185,27 +191,6 @@
               <div class="col-4"></div>
               <div class="col">
                 <a href="addcrops" class="btn btn-common btn-nv-sty" style="width: 50%;">Add</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4"></div>
-    </div>
-    <br>
-    <div class="row">
-      <div class="col-lg-4"></div>
-      <div class="col">
-        <div class="card" style="opacity: 90%; height: 170px">
-          <div class="card-body">
-            <h5 class="card-title">New notifications</h5>
-            <p class="card-text">New deal/order confirmation request from </p>
-            <div class="row">
-              <div class="col">
-                <button type="submit" href="" class="btn btn-common btn-nv-sty" style="width: 100%;">Accept</button>
-              </div>
-              <div class="col">
-                <button type="submit" href="" class="btn btn-common btn-nv-sty" style="width: 100%;">Reject</button>
               </div>
             </div>
           </div>
