--- a/src/views/institution_dashboard.hbs
+++ b/src/views/institution_dashboard.hbs
@@ -49,10 +49,13 @@
             </button>
             <img src="/img/logo.png" class="navbar-brand" style="width: 250px; height:70px" alt=""/>
           </div>
-          <div class="collapse navbar-collapse" id="main-navbar" style="margin-left: 350px;">
+          <div class="collapse navbar-collapse" id="main-navbar" style="margin-left: 10%;">
             <ul class="navbar-nav mr-auto w-100">
               <li class="nav-item active">
                 <a class="nav-link" href="dashboard">Dashboard</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="viewfarmers">View Farmer's Profiles</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="updateprofile">Update Profile</a>
@@ -70,6 +73,9 @@
         <ul class="mobile-menu">
           <li>
             <a class="page-scroll" href="dashboard">Dashboard</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="viewfarmers">View Farmer's Profiles</a>
           </li>
           <li>
             <a class="page-scroll" href="updateprofile">Update Profile</a>
