--- a/src/views/registerfarmer.hbs
+++ b/src/views/registerfarmer.hbs
@@ -195,17 +195,25 @@
       </div>
     </section>
     </div>
-      <footer id="contact" class="footer-area section-padding" style="opacity: 80%;">
+      <footer id="contact" class="footer-area section-padding" style="opacity: 80%; color:white">
         <div class="container">
             <div class="row">
-                <div class="col-12 wow fadeInUp" data-wow-delay="0.4s">
+                <div class="col-lg-6 col-8 wow fadeInUp" data-wow-delay="0.4s">
                     <h3>QUICK LINKS</h3>
                     <ul>
-                        <li><a href="login">LOGIN</a></li>
-                        <li><a href="register">REGISTER</a></li>
+                        <li><a href="/users/login">LOGIN</a></li>
+                        <li><a href="/users/register">REGISTER</a></li>
                         <li><a href="about.html">ABOUT ORGANIQUE</a></li>
-                        <li><a href="contact.html">CONTACT US</a></li>
                         <li><a href="help.html">HELP</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-6 col-12 wow fadeInUp" data-wow-delay="0.4s">
+                    <h3>CONTACT US</h3>
+                    <p style="font-size:15px;">Reach out to us at :</p>
+                    <br>
+                    <ul>
+                        <li>&emsp;Email id&emsp;:&emsp;gandhias18.comp@coep.ac.in</li>
+                        <li>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;kondevp10.comp@coep.ac.in</li>
                     </ul>
                 </div>
             </div>
@@ -217,6 +225,22 @@
         <i class="lni-chevron-up"></i>
     </a>
 
+    <div id="preloader">
+      <div class="sk-circle">
+        <div class="sk-circle1 sk-child"></div>
+        <div class="sk-circle2 sk-child"></div>
+        <div class="sk-circle3 sk-child"></div>
+        <div class="sk-circle4 sk-child"></div>
+        <div class="sk-circle5 sk-child"></div>
+        <div class="sk-circle6 sk-child"></div>
+        <div class="sk-circle7 sk-child"></div>
+        <div class="sk-circle8 sk-child"></div>
+        <div class="sk-circle9 sk-child"></div>
+        <div class="sk-circle10 sk-child"></div>
+        <div class="sk-circle11 sk-child"></div>
+        <div class="sk-circle12 sk-child"></div>
+      </div>
+    </div>
     
     <script>
         function openForm() {
