--- a/src/views/addcrops.hbs
+++ b/src/views/addcrops.hbs
@@ -47,18 +47,24 @@
               <span class="icon-menu"></span>
               <span class="icon-menu"></span>
             </button>
-            <img src="/img/logo.png" class="navbar-brand" style="width: 250px" alt=""/>
+            <img src="/img/logo.png" class="navbar-brand" style="width: 250px; height: 70px" alt=""/>
           </div>
-          <div class="collapse navbar-collapse" id="main-navbar" style="margin-left: 350px;">
+          <div class="collapse navbar-collapse" id="main-navbar" style="margin-left: 20%;">
             <ul class="navbar-nav mr-auto w-100">
               <li class="nav-item">
                 <a class="nav-link" href="dashboard">Dashboard</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="notifications">Notifications</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="updateprofile">Update Profile</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="chat">Chat</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="logout">Logout</a>
               </li>
             </ul>
           </div>
@@ -69,10 +75,16 @@
             <a class="page-scroll" href="dashboard">Dashboard</a>
           </li>
           <li>
+            <a class="page-scroll" href="notifications">Notifications</a>
+          </li>
+          <li>
             <a class="page-scroll" href="updateprofile">Update Profile</a>
           </li>
           <li>
             <a class="page-scroll" href="chat">Chat</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="logout">Logout</a>
           </li>
         </ul>
       </nav>
