--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -88,17 +88,25 @@
       </div>
     </section>
     </div>
-      <footer id="contact" class="footer-area section-padding" style="opacity: 80%;">
+      <footer id="contact" class="footer-area section-padding" style="opacity: 80%; color:white">
         <div class="container">
             <div class="row">
-                <div class="col-12 wow fadeInUp" data-wow-delay="0.4s">
+                <div class="col-lg-6 col-8 wow fadeInUp" data-wow-delay="0.4s">
                     <h3>QUICK LINKS</h3>
                     <ul>
                         <li><a href="/users/login">LOGIN</a></li>
                         <li><a href="/users/register">REGISTER</a></li>
                         <li><a href="about.html">ABOUT ORGANIQUE</a></li>
-                        <li><a href="contact.html">CONTACT US</a></li>
                         <li><a href="help.html">HELP</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-6 col-12 wow fadeInUp" data-wow-delay="0.4s">
+                    <h3>CONTACT US</h3>
+                    <p style="font-size:15px;">Reach out to us at :</p>
+                    <br>
+                    <ul>
+                        <li>&emsp;Email id&emsp;:&emsp;gandhias18.comp@coep.ac.in</li>
+                        <li>&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;kondevp10.comp@coep.ac.in</li>
                     </ul>
                 </div>
             </div>
