--- a/src/views/institution_dashboard.hbs
+++ b/src/views/institution_dashboard.hbs
@@ -160,6 +160,7 @@
       <div class="col">
         <div class="card" style="opacity: 90%; height: 250px">
           <div class="card-body">
+            <form action="deal_lock" method="POST">
             <h5 class="card-title">New deal confirmation</h5>
             <p class="card-text">Enter the username of the farmer who you signed a deal with (It will reflect on your account after the farmer has confirmed the deal):</p>
             <input type="text" class="form-control" placeholder="Username of farmer" name="farmerusername" />
@@ -169,7 +170,8 @@
                     <button type="submit" href="" class="btn btn-common btn-nv-sty" style="width: 100%;">Submit</button> 
                 </div>
                 <div class="col-4"></div>
-            </div>          
+            </div> 
+            </form>         
           </div>
         </div>
       </div>
