--- a/src/views/farmer_dashboard.hbs
+++ b/src/views/farmer_dashboard.hbs
@@ -149,7 +149,7 @@
             <div class="row">
               <div class="col-3"></div>
               <div class="col">
-                <a href="updatecrops" class="btn btn-common btn-nv-sty">Update crop details</a>
+                <a href="updatecrops/{{this.1._id}}" class="btn btn-common btn-nv-sty">Update crop details</a>
               </div>
             </div>
           </div>
@@ -166,7 +166,7 @@
             <div class="row">
               <div class="col-3"></div>
               <div class="col">
-                <a href="updatecrops" class="btn btn-common btn-nv-sty">Update crop details</a>
+                <a href="updatecrops/{{this.2._id}}" class="btn btn-common btn-nv-sty">Update crop details</a>
               </div>
             </div>
           </div>
