--- a/src/views/institution_dashboard.hbs
+++ b/src/views/institution_dashboard.hbs
@@ -128,7 +128,7 @@
         <div class="card" style="opacity: 90%; height: 130px">
           <div class="card-body">
             <h5 class="card-title">Crop requirements</h5>
-            <p class="card-text">Tomatoes, potatoes, onions</p>
+            <p class="card-text">{{institution.requirements}}</p>
           </div>
         </div>
       </div>
@@ -140,15 +140,17 @@
       <div class="col">
         <div class="card" style="opacity: 90%; height: 250px">
           <div class="card-body">
+            <form id="requirements" action="crop_requirements" method="POST">
             <h5 class="card-title">Add/update crop requirements</h5>
             <p class="card-text">All the previous crop requirements will be overwritten by the ones entered here so if you want to retain the previous requirements, enter them here along with the new ones.</p>
-            <input type="text" class="form-control" placeholder="New crop requirements" name="croprequirements"/>
+            <input type="text" class="form-control" placeholder="New crop requirements" name="croprequirements" value="{{institution.requirements}}"/>
             <div class="row">
               <div class="col-4"></div>
               <div class="col">
-                <a href="" class="btn btn-common btn-nv-sty" style="width: 50%;">Add</a>
+                <button type="submit" class="btn btn-common btn-nv-sty" style="width: 50%;">Add Requirements</button>
               </div>
             </div>
+            </form>
           </div>
         </div>
       </div>
