--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -54,6 +54,7 @@
                             class="form-control"
                             placeholder="Enter username"
                             name="username"
+                            required
                           />
                         </div>
                       </div>
@@ -64,6 +65,7 @@
                             class="form-control"
                             placeholder="Password"
                             name="password"
+                            required
                           />
                         </div>
                       </div>
