--- a/src/views/buyer_dashboard.hbs
+++ b/src/views/buyer_dashboard.hbs
@@ -106,7 +106,7 @@
       <div class="col">
         <div class="card" style="opacity: 90%; height: 130px">
           <div class="card-body">
-            <h5 class="card-title">Number of deals</h5>
+            <h5 class="card-title">Number of orders</h5>
             <p class="card-text">{{buyer.orders}}</p>
           </div>
         </div>
