--- a/src/views/help.hbs
+++ b/src/views/help.hbs
@@ -26,67 +26,41 @@
   <img src="/img/crops.gif" id="mygif" alt="...">
   <div class="content">
     <br><br>
-    <section id="form-dom" class="services">
-      <div class="container" style="margin-bottom: 30px; opacity:90%">
-        <div class="row">
-          <div class="col-12">
-            <div class="col-12 col-md-12 col-lg-10 log-style">
-              <div id="form-main">
-                <h1
-                  class="section-title wow fadeInUp animated"
-                  data-wow-delay="0.2s"
-                  style="
-                    visibility: visible;
-                    -webkit-animation-delay: 0.2s;
-                    -moz-animation-delay: 0.2s;
-                    animation-delay: 0.2s;
-                  "
-                >
-                  Register
-                </h1>
-                <div class="design">
-                  <form id="register-form">
-                    <h3></h3>
-                    <div class="row">
-                      <div class="col">
-                        <a href="registerfarmer" class="btn btn-common btn-nv-sty" style="width: 100%;">Register as farmer</a>
-                      </div>
-                      <div class="col">
-                        <a href="registerinvestor" class="btn btn-common btn-nv-sty" style="width: 100%;">Register as investor</a>
-                      </div>
-                    </div>
-                    <div class="row">
-                      <div class="col">
-                        <a href="registerinstitution" class="btn btn-common btn-nv-sty" style="width: 100%;">Register as food-making institution</a>
-                      </div>
-                      <div class="col">
-                        <a href="registerbuyer" class="btn btn-common btn-nv-sty" style="width: 100%;">Register as buyer</a>
-                      </div>
-                    </div>
-                    <br>
-                    <div class="row">
-                      <div class="col-md-3 col-lg-4"></div>
-                      <div class="col">
-                        <a href="/users/login" style="font-size: 20px">Already registered? Login here!</a>
-                      </div>
-                    </div>
-                    
-
-                    <div class="row">
-                      <div class="col">
-                        <p class="error text-danger" align="center"></p>
-                        <p class="success text-success" align="center"></p>
-                      </div>
-                    </div>
-                  </form>
-                </div>
+    <div style="text-align: center; position: sticky;">
+      <h1> <span style="background-color: #fff; font-size: 40px; color:#016168; padding: 15px; opacity: 80%;">Help</span> </h1>
+    </div>
+    <br>
+    <!-- form -->
+      <section id="form-dom">
+        <div class="container" style="margin-bottom: 30px; opacity: 90%;">
+          <div class="row">
+            <div class="col-12">
+              <div class="col-12 col-md-8 col-lg-6 log-style">
+                  <div class="design" style="font-size: 17px;">
+                      <ul>
+                        <li>
+                            <p style="font-size: 20;">Click on any of the links below to see the functionalities available for each user and how to use them:</p>
+                        </li><br>
+                        <li>
+                            <a href="">Tutorial for farmers</a>
+                        </li><br>
+                        <li>
+                            <a href="">Tutorial for investors</a>
+                        </li><br>
+                        <li>
+                            <a href="">Tutorial for food-making institutions</a>
+                        </li><br>                        
+                        <li>
+                            <a href="">Tutorial for buyers</a>
+                        </li>
+                    </ul>
+                  </div>
               </div>
+              <div class="col-6"></div>
             </div>
-            <div class="col-6"></div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
     </div>
       <footer id="contact" class="footer-area section-padding" style="opacity: 80%; color:white">
         <div class="container">
@@ -117,7 +91,6 @@
     <a href="#" class="back-to-top">
         <i class="lni-chevron-up"></i>
     </a>
-
     
     <script>
         function openForm() {
