--- a/src/views/buyer_dashboard.hbs
+++ b/src/views/buyer_dashboard.hbs
@@ -135,7 +135,7 @@
             <h5 class="card-title">Rate a farmer</h5>
             <p class="card-text">You can only rate a farmer if you have bought anything from them.</p>
             <input type="text" class="form-control" placeholder="Username of farmer" name="farmerusername"/>
-            <input type="number" step="0.5" class="form-control" placeholder="Rating(out of 5 in steps of 0.5)" name="farmerrating"/>
+            <input type="number" step="0.5" class="form-control" placeholder="Rating(out of 5 in steps of 0.5)" name="farmerrating" max="5"/>
             <div class="row">
               <div class="col-3"></div>
               <div class="col">
