--- a/src/views/buyer_profile.hbs
+++ b/src/views/buyer_profile.hbs
@@ -18,11 +18,76 @@
   min-height: 100%;
   }
 {{/section}}
-
-
-
 <div class="cover">
   <img src="/img/crops.gif" id="mygif" alt="...">
+<header id="header-wrap">
+      <!-- Navbar Start -->
+      <nav
+        class="navbar navbar-expand-lg fixed-top scrolling-navbar"
+        style="background-color: #fff;"
+      >
+        <div class="container">
+          <!-- Brand and toggle get grouped for better mobile display -->
+          <div class="navbar-header">
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-toggle="collapse"
+              data-target="#main-navbar"
+              aria-controls="main-navbar"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+              <span class="icon-menu"></span>
+              <span class="icon-menu"></span>
+              <span class="icon-menu"></span>
+            </button>
+            <img src="/img/logo.png" class="navbar-brand" style="width: 250px; height: 70px" alt=""/>
+          </div>
+          <div class="collapse navbar-collapse" id="main-navbar" style="margin-left: 10%;">
+            <ul class="navbar-nav mr-auto w-100">
+              <li class="nav-item">
+                <a class="nav-link" href="dashboard">Dashboard</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="viewfarmers">View Farmer's Profiles</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="updateprofile">Update Profile</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="chat">Chat</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="logout">Logout</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+
+        <ul class="mobile-menu">
+          <li>
+            <a class="page-scroll" href="dashboard">Dashboard</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="viewfarmers">View Farmer's Profiles</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="updateprofile">Update Profile</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="chat">Chat</a>
+          </li>
+          <li>
+            <a class="page-scroll" href="logout">Logout</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+<br><br><br><br><br>
+
+
   <div class="content">
     <br><br>
     
@@ -38,69 +103,43 @@
                     -moz-animation-delay: 0.2s;
                     animation-delay: 0.2s;
                   ">
-                    Register as a Buyer
+                    Update your profile
                   </h1>
                   <div class="design">
-                    <form id="register-form"  method="POST" action="registerbuyer" enctype="multipart/form-data">
+                    <form id="register-form"  method="POST" action="updateprofile">
                       <h3></h3>
                       <div class="row">
+                          
                         <div class="col">
-                          <input type="text" class="form-control" placeholder="Full Name" name="registername" />
+                          <h3>Full Name</h3><input type="text" class="form-control" placeholder="Full Name" name="registername" value="{{buyer.fullname}}" />
                         </div>
                       </div>
+                      
                       <div class="row">
                         <div class="col">
-                          <input type="text" class="form-control" placeholder="Username" name="username" />
+                          <h3>Email</h3><input type="email" class="form-control" placeholder="Email Id" name="email" value="{{user.email}}" />
                         </div>
                       </div>
+                      
+                      
                       <div class="row">
                         <div class="col">
-                          <input type="email" class="form-control" placeholder="Email Id" name="email" />
-                        </div>
-                      </div>
-                      <div class="row">
-                        <div class="col">
-                          <input type="Password" class="form-control" placeholder="Password" name="password" />
-                        </div>
-                      </div>
-                      <div class="row">
-                        <div class="col">
-                          <input type="Password" class="form-control" placeholder="Confirm Password" name="password2" />
-                        </div>
-                      </div>
-                      <div class="row">
-                        <div class="col">
-                          <input type="text" class="form-control" placeholder="Pan number" name="pannumber" />
-                        </div>
-                      </div>
-                      <div class="row">
-                        <div class="col">
+                            <h3>Requirements</h3>
                           <input type="text" class="form-control"
                             placeholder="Requirements(specify the names of crops you would usually prefer to buy)"
-                            name="requirements" />
+                            name="requirements" value="{{buyer.requirements}}"/>
                         </div>
                       </div>
-                      <div class="row">
-                        <div class="col">
-                          <label for="pancard">Upload image of Pan Card:</label>
-                          <input type="file" class="form-control" placeholder="Pancard" name="pancard" id="pancard" />
-                        </div>
-                      </div>
+                      
                       <div class="row">
                         <div class="col-lg-3 col-md-4 col-3"></div>
                         <div class="col">
                           <button type="submit" href="" class="btn btn-common btn-nv-sty" style="width: 50%;">
-                            Register
+                            Update
                           </button>
                         </div>
                       </div>
 
-                      <div class="row">
-                        <div class="col-md-3 col-1 col-lg-3"></div>
-                        <div class="col">
-                          <a href="login" style="font-size: 20px">Already registered? Login here!</a>
-                        </div>
-                      </div>
 
                       <div class="row">
                         <div class="col">
