--- a/src/views/farmer_dashboard.hbs
+++ b/src/views/farmer_dashboard.hbs
@@ -147,9 +147,12 @@
             <h5 class="card-title">Crop name : {{this.1.cropname}}</h5>
             <p class="card-text">Stage of growth :{{this.1.dev_stage}} </p>
             <div class="row">
-              <div class="col-3"></div>
+              <div class="col-1"></div>
               <div class="col">
                 <a href="updatecrops/{{this.1._id}}" class="btn btn-common btn-nv-sty">Update crop details</a>
+              </div>
+              <div class="col">
+                <a href="deletecrops/{{this.1._id}}" class="btn btn-common btn-nv-sty">Delete crop details</a>
               </div>
             </div>
           </div>
@@ -164,9 +167,12 @@
             <h5 class="card-title">Crop name : {{this.2.cropname}}</h5>
             <p class="card-text">Stage of growth :{{this.2.dev_stage}} </p>
             <div class="row">
-              <div class="col-3"></div>
+              <div class="col-1"></div>
               <div class="col">
                 <a href="updatecrops/{{this.2._id}}" class="btn btn-common btn-nv-sty">Update crop details</a>
+              </div>
+              <div class="col">
+                <a href="deletecrops/{{this.2._id}}" class="btn btn-common btn-nv-sty">Delete crop details</a>
               </div>
             </div>
           </div>
