--- a/src/views/buyer_dashboard.hbs
+++ b/src/views/buyer_dashboard.hbs
@@ -161,14 +161,14 @@
               <div class="row">
                 <div class="col-4"></div>
                 <div class="col">
-                  <button type="submit" class="btn btn-common btn-nv-sty" style="width: 50%;">Add Requirements</button>
+                  <button type="submit" class="btn btn-common btn-nv-sty" style="width: 50%;">Add</button>
                 </div>
               </div>
             </form>
           </div>
         </div>
       </div>
-      <div class="col">
+      <div class="col-lg-4 col-12">
         <div class="card" style="opacity: 90%; height: 300px; margin-bottom: 20px">
           <div class="card-body">
             <h5 class="card-title">New order confirmation</h5>
